--- a/HANDOVER_Bootstrapped/css/custom.css
+++ b/HANDOVER_Bootstrapped/css/custom.css
@@ -85,6 +85,12 @@ header #header2
     padding:0 !important;
 }
 
+.lineSpacer
+{
+    border-bottom:1px solid #f26900;
+    margin-bottom: 1em;
+}
+
 .loggedIn
 {
     text-align:right;
@@ -128,6 +134,13 @@ main
 {
     border-top:1px solid #e7e7e7;
 }
+
+.labelSpacer
+{
+    margin-top:1em;
+}
+
+
 
 /* BUTTONS */
 .btn-orange
@@ -177,4 +190,9 @@ main
     background-color:#f26900;
     color:#ffffff;
     border:1px solid #4d4d4d;
+}
+
+.btn-space
+{
+    margin:2em 0;
 }
